--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,7 +51,7 @@ jobs:
 
       - name: Download and Extract Tomcat
         run: |
-          wget https://dlcdn.apache.org/tomcat/tomcat-11/v11.0.11/bin/apache-tomcat-11.0.11.tar.gz
+          wget https://archive.apache.org/dist/tomcat/tomcat-11/v11.0.11/bin/apache-tomcat-11.0.11.tar.gz
           tar -xzf apache-tomcat-11.0.11.tar.gz
           mv apache-tomcat-11.0.11 tomcat
 
