--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,24 @@
      <build>
           <pluginManagement>
                <plugins>
+                   <plugin>
+                       <groupId>org.apache.maven.plugins</groupId>
+                       <artifactId>maven-project-info-reports-plugin</artifactId>
+                       <version>3.9.0</version>
+                       <configuration>
+                           <dependencyDetailsEnabled>false</dependencyDetailsEnabled>
+                       </configuration>
+                   </plugin>
+                   <plugin>
+                       <groupId>org.apache.maven.plugins</groupId>
+                       <artifactId>maven-site-plugin</artifactId>
+                       <version>4.0.0-M13</version>
+                       <configuration>
+                           <locales>default,en_US</locales>
+                           <outputDirectory>${project.build.directory}/site</outputDirectory>
+                           <relativizeSiteLinks>false</relativizeSiteLinks>
+                       </configuration>
+                   </plugin>
                     <plugin>
                          <groupId>org.apache.maven.plugins</groupId>
                          <artifactId>maven-compiler-plugin</artifactId>
