recovery some file of yuqiaokeji(see the remove commit: 53828966ac51706efebd5c43ef23a849469f651f)

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,6 +48,8 @@ jobs:
           cp "$ORIGINAL_WAR_FILE" "java-web-test/target/java-web-test.war"
           ORIGINAL_WAR_FILE=$(ls -al front-end/target/front-end-*.war | awk '{print $9}')
           cp "$ORIGINAL_WAR_FILE" "front-end/target/front-end.war"
+          ORIGINAL_WAR_FILE=$(ls -al yuqiaokeji/target/yuqiaokeji-*.war | awk '{print $9}')
+          cp "$ORIGINAL_WAR_FILE" "yuqiaokeji/target/yuqiaokeji.war"
 
       - name: Download and Extract Tomcat
         run: |
@@ -59,6 +61,7 @@ jobs:
         run: |
           cp java-web-test/target/java-web-test.war tomcat/webapps/
           cp front-end/target/front-end.war tomcat/webapps/
+          cp yuqiaokeji/target/yuqiaokeji.war tomcat/webapps/
           nohup tomcat/bin/catalina.sh start &
           sleep 30
 
@@ -77,3 +80,10 @@ jobs:
             exit 1
           fi
           echo "Test front-end Home Page Accessibility successfully, state code: $STATUS_CODE"
+          
+          STATUS_CODE=$(curl -s -o /dev/null -w "%{http_code}" http://localhost:8080/yuqiaokeji/index.jsp)
+          if [ "$STATUS_CODE" -ne 200 ]; then
+            echo "Test yuqiaokeji Home Page Accessibility failed, state code: $STATUS_CODE"
+            exit 1
+          fi
+          echo "Test yuqiaokeji Home Page Accessibility successfully, state code: $STATUS_CODE"
